Updates from ShareLaTeX

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -1246,7 +1246,6 @@
     keywordstyle=\color{blue},
     stringstyle=\color{red},
     basicstyle=\small\ttfamily, % basic font setting
-    escapechar=\&,
     % keyword highlighting
     classoffset=1, % starting new class
     keywordstyle=\color{weborange},
@@ -1265,18 +1264,20 @@
     
     \lstinputlisting[language=Alloy, caption=Data4Help facts, firstline=101, lastline=128]{TrackMeAlloyModel.als}
     
-    \lstinputlisting[language=Alloy, caption=Automated-SOS facts, firstline=129, lastline=151]{TrackMeAlloyModel.als}
+    \lstinputlisting[language=Alloy, caption=Automated-SOS facts, firstline=129, lastline=150]{TrackMeAlloyModel.als}
     
-    \lstinputlisting[language=Alloy, caption=Track4Run facts, firstline=152, lastline=194]{TrackMeAlloyModel.als}
+    \lstinputlisting[language=Alloy, caption=Track4Run facts, firstline=151, lastline=193]{TrackMeAlloyModel.als}
     
     \newpage
 \subsection{Predicates}
 
-    \lstinputlisting[language=Alloy, caption=Data4Help predicates, firstline=195, lastline=214]{TrackMeAlloyModel.als}
+    \lstinputlisting[language=Alloy, caption=Data4Help predicates, firstline=194, lastline=213]{TrackMeAlloyModel.als}
     
-    \lstinputlisting[language=Alloy, caption=Automated-SOS predicates, firstline=215, lastline=224]{TrackMeAlloyModel.als}
+    \lstinputlisting[language=Alloy, caption=Automated-SOS predicates, firstline=214, lastline=223]{TrackMeAlloyModel.als}
     
-    \lstinputlisting[language=Alloy, caption=Track4Run predicates, firstline=225, lastline=254]{TrackMeAlloyModel.als}
+    \lstinputlisting[language=Alloy, caption=Track4Run predicates, firstline=224, lastline=253]{TrackMeAlloyModel.als}
+    
+    \lstinputlisting[language=Alloy, caption=Common predicates, firstline=255, lastline=298]{TrackMeAlloyModel.als}
     
     \newpage
 \subsection{Worlds}
